[project]
name = "ql-packet-fragmentation"
version = "0.1.0"
description = "eBPF-based packet fragmentation analysis for Quake Live"
requires-python = ">=3.8"
dependencies = [
    "influxdb-client>=1.43.0",
    "redis>=4.0.0",
    "pyroute2>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ql-capture = "run:main"
